@@ -87,7 +87,6 @@
 /config/repository/reorder RepositoriesReorderR GET
 
 /config/repository/syncnow/#UUID SyncNowRepositoryR GET
-/config/repository/disable/#UUID DisableRepositoryR GET
 
 /config/repository/delete/confirm/#UUID DeleteRepositoryR GET
 /config/repository/delete/start/#UUID StartDeleteRepositoryR GET
