@@ -3,6 +3,7 @@ git-annex (5.20150917) UNRELEASED; urgency=medium
   * info: Don't allow use in a non-git-annex repository, since it
     uses the git-annex branch and would create it if it were missing.
   * assistant: When updating ~/.ssh/config, preserve any symlinks.
+  * webapp: Remove the "disable remote" feature from the UI.
 
  -- Joey Hess <id@joeyh.name>  Wed, 16 Sep 2015 12:23:33 -0400
 
